src/test/deca/context/invalid/30_MethodSigError.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 17: ContextualError: f must have same signature
// 
// Historique:
//    cree le 01/01/2022

class A {
	int f(int x) {
		return x;
	}
}
class B extends A {
	// Doit etre refuse.
	int f() {
		return 1;
	}
}
